--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,8 +1,8 @@
 left_links:
   - name: Blog
     link: /blog/
-  - name: About
-    link: /about/
+  - name: Industries
+    link: /industries/
   - name: Contact
     link: /contact/
 right_links:
@@ -11,17 +11,17 @@ right_links:
     new_window: true
     social_icon: Facebook
   - name:
-    link: https://twitter.com/
+    link: https://twitter.com/cervantllc
     social_icon: Twitter
     new_window: true
-  - name:
-    link: https://youtube.com/
-    social_icon: YouTube
-    new_window: true
-  - name:
-    link: https://plus.google.com/
-    social_icon: Google Plus
-    new_window: true
+#  - name:
+#    link: https://youtube.com/
+#    social_icon: YouTube
+#    new_window: true
+#  - name:
+#    link: https://plus.google.com/
+#    social_icon: Google Plus
+#    new_window: true
   - name:
     link: /feed.xml
     social_icon: RSS
